2017-05-07  Araki Ken  <arakiken@users.sf.net>

	* keymap.c: XK_Kakji, XK_Muhenkan, XK_Henkan, XK_Hiragana, XK_Katakana and
	  XK_Zenkaku_Hankaku are processed.

	* im_iimf.c: create_handle() searches unix domain socket files in /tmp/.iiim-$USER/.

	* vt_parser.c:
	  - DECRQDE (CSI " v), NP(CSI U), PP(CSI V), PPA(CSI SP P), PPR(CSI SP Q) and
	    PPB(CSI SP R) are processed.
	  - DECCRA and DECLRP supports page.

	* ui_picture.c: cleanup_inline_pictures() checks term->screen->page_edits.

	* vt_screen.[ch]:
	  - 'page_edits' is added to vt_screen_t.
	  - vt_screen_is_alternative_edit() is changed from function to macro.
	  - src_page and dst_page arguments are added to vt_screen_copy_area().
	  - vt_screen_get_page_id(), vt_screen_goto_page(), vt_screen_goto_next_page()
	    and vt_screen_goto_prev_page() are added.

2017-05-05  Araki Ken  <arakiken@users.sf.net>

	* console/ui_font.c, ui_screen.c: line_space and letter_space options are ignored.

	* console/ui_window.c, fb/ui_window.c: ui_window_is_scrollable() returns 0
	  if IM_WINDOW_IS_ACTIVATED() (not IS_IM_WINDOW()) is true.

	* console/ui_display.[ch], fb/ui_display.[ch]:
	  IM_WINDOW_IS_ACTIVATED() macro is added.

	* main/main-con.c, console/ui_display.c: If termios.c_cc[VERASE] is 0x7f,
	  0x7f character from stdin is converted to 0x08.

	* main/Makefile.in: LIBS2_{fb|console|wayland} variables are fixed.

	* iiimf/keymap.c, im_iiimf.h, im_iiimf_aux.c: Platforms except x11 are supported.

	* im_iiimf.c:
	  - The timing of calling status_change() or stat_screen->delete() is fixed.
	  - IIIMF_SERVER_ADDRESS environmental variable => HTT_SERVER_ADDRESS.

	* iiimf/Makefile.in: TARGET_{xlib|fb|console|wayland} are added.

2017-05-04  Araki Ken  <arakiken@users.sf.net>

	* quartz/ui_window.c, quartz/ui_font.[ch], quartz/ui.h, cocoa.m:
	  ui_font_t::cg_font is moved to XFontStruct.

	* win32/ui_window.c, win32/ui_font.[ch], win32/ui.h, ui_font_cache.c: